CHANGELOG
Note : this project started in October 2016.
Many improvements have been done since this date until August 2018.
Then the project has been refreshed in March 2019 with major modifications, in a more pythonic way.

21/04/2019
    In writer.py module
        Clean code
            Functions removed
                writeFinalLog
                copyFile
        English doctrings
            prepaLogScan
            write
            writeLog
    In scan.py module
        English doctrings
            detectOS
    In av_date.py module
        Clean code
            Function removed
                initMcAfee
    In complement.py module
        Clean code
            Removed 2 global vars "username" and "computername"
            Replace "elemInLog" function name by "elemInList"
    In scans.py module
        Clean code
            Removed socket import
        update doctrings
        hotFixesInfo()
            Change KB date format : m/d/Y to Y-m-d
        servicesInfo() & portsInfo()
            Improve display
    In verif.py module
        English doctrings
    Better display of the final log
    Scanning time show at the end of the log

20/03/2019 to 20/04/2019
    First commit
    Major modifications 
        Many system calls replace by Python modules : only 3 left !
        Functions with French and English doctrings
        One unique log file is now generated during the all process
        The scan take less much time than before